src/styles/components/_header.scss
.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background-color: #ffffff;
  padding: 24px 0;
  @media (min-width: 992px) {
    padding: 24px 0;
  }

  &__container {
    display: flex;
    align-items: center;
    justify-content: space-between;

    @media (min-width: 992px) {
      align-items: stretch;
    }
  }

  &__hamburger {
    display: flex;
    flex-direction: column;
    justify-content: center;
    // gap: 5px;
    // width: 52px;
    // height: 52px;
    background: none;
    border: none;
    cursor: pointer;
    padding: 0;

    @media (min-width: 992px) {
      display: none;
    }
  }

  &__nav {
    &--desktop {
      display: none;

      @media (min-width: 992px) {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 8px;
      }
    }

    &--mobile {
      display: none;
      flex-direction: column;
      position: fixed;
      top: 90px;
      left: 0;
      right: 0;
      bottom: 0;
      background: #ffffff;
      padding: 24px 16px;
      // padding-top: 90px;
      gap: 16px;
      z-index: 999;
      overflow-y: auto;
      -webkit-overflow-scrolling: touch;

      @media (min-width: 992px) {
        display: none !important;
      }
    }

    &--open {
      display: flex;
    }
  }

  &__logo {
    svg {
      height: 42px;
      width: auto;
    }

    @media (min-width: 992px) {
      display: flex;
      align-items: center;
      // padding: 24px 0;
    }
  }

  &__nav-link {
    font-family: var(--font-avenir), sans-serif;
    font-style: normal;
    font-weight: var(--font-weight-medium);
    font-size: 16px;
    line-height: 18px;
    text-align: left;
    padding: 8px 0;
    color: #000000;

    &--active {
      color: #ef4230;
    }

    @media (min-width: 992px) {
      text-align: center;
      padding: 0;
    }
  }

  &__nav-item {
    position: relative;

    @media (min-width: 992px) {
      display: flex;
      align-items: flex-end;
      // padding-bottom: 24px;

      &::after {
        content: '';
        position: absolute;
        top: 100%;
        left: -32px;
        right: -32px;
        height: 37px;
      }
    }
  }

  &__dropdown {
    display: flex;
    flex-direction: column;
    width: 100%;
    background: #ffffff;
    box-shadow: none;
    border-radius: 0;
    overflow: hidden;

    @media (min-width: 992px) {
      position: absolute;
      top: 100%;
      left: 0;
      width: 257px;
      border-radius: 16px 0 16px 0;
      box-shadow: 0 1px 4px 0 rgba(12, 12, 13, 0.18);
      z-index: 200;
      top: calc(100% + 37px);
    }
  }

  &__dropdown-link {
    display: flex;
    align-items: flex-start;
    padding: 8px 20px;
    @media (min-width: 992px) {
    padding: 12px 16px;
    }
    font-family: var(--font-avenir), sans-serif;
    font-style: normal;
    font-weight: var(--font-weight-roman);
    font-size: 16px;
    line-height: 22px;
    color: #1f1f1f;
    background: #ffffff;
    transition:
      background 0.2s,
      color 0.2s;

    &:hover,
    &--active {
      background: #ef4230;
      color: #ffffff;
    }
  }
 &__mega-link,
  &__mega-menu {
    background: #ffffff;
    z-index: 200;
    position: static;
    padding: 16px 0;

    @media (min-width: 992px) {
      position: absolute;
      top: calc(100% + 37px);
      left: 0;
      right: 0;
      margin: 0 auto;
      transform: translateX(-43%);
      width: calc(100vw + 10px);
      padding: 24px 0;
      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    }
  }

  &__mega-menu-inner {
    display: flex;
    flex-direction: column;
    gap: 24px;

    @media (min-width: 992px) {
      flex-direction: row;
      justify-content: center;
      gap: 20px;
    }
  }

  &__mega-col {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100%;

    @media (min-width: 992px) {
      width: 265px;
    }
  }

  &__mega-title {
    font-family: var(--font-avenir), sans-serif;
    font-style: normal;
    font-weight: var(--font-weight-heavy);
    font-size: 20px;
    line-height: 30px;
    color: #000000;
    transition: color 0.2s;

    &:hover {
      color: #ef4230;
    }
  }

  &__mega-links {
    display: flex;
    flex-direction: column;
  }

  // &__mega-link {
  //   padding: 4px 0;
  //   font-family: var(--font-avenir), sans-serif;
  //   font-style: normal;
  //   font-weight: var(--font-weight-roman);
  //   font-size: 16px;
  //   line-height: 22px;
  //   color: #1f1f1f;
  //   transition: color 0.2s;

  //   &:hover {
  //     color: #ef4230;
  //   }

  //   &--active {
  //     color: #ef4230;
  //   }
  // }

  &__phone {
    display: flex;

    @media (min-width: 992px) {
      display: none;
    }
  }

  &__cta--desktop {
    display: none;

    @media (min-width: 992px) {
      display: flex;
      // align-items: flex-end;
      // padding-bottom: 24px;
    }
  }
}

